[tool.poetry]
name = "pyntrinio"
version = "0.1.0"
description = "Python package that draws needed data from intrinio API objects."
authors = ["Roc Zhang <roc_zhang@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
