[tool.poetry]
name = "pyntrinio"
version = "0.1.0"
description = "Python package that draws needed data from intrinio API objects."
authors = ["Roc Zhang <roc_zhang@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.1"
intrinio_sdk = "^5.1.0"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.8.1"
pytest = "^5.3.5"
codecov = "^2.0.16"
flake8 = "^3.7.9"
sphinx = "^2.4.4"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
